--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc -w",
-		"server": "node --watch dist/index.js"
+		"build": "npx tsc",
+		"server": "node dist/index.js",
+		"build:dev": "npx tsc -w",
+		"server:dev": "node --watch dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
