--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx tsc",
-		"server": "node dist/index.js",
+		"server": "node ./dist/index.js",
 		"build:dev": "npx tsc -w",
 		"server:dev": "node --watch dist/index.js"
 	},
