--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,8 @@
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"sourceMap": true,
+		"esModuleInterop": true,
 		"outDir": "./dist"
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*.ts"]
 }
