--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.2"
+		"@prisma/client": "^5.7.0",
+		"bcrypt": "^5.1.1",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.4",
+		"prisma": "^5.7.0",
 		"typescript": "^5.3.3"
 	}
 }
