--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
 	"devDependencies": {
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.4",
+		"@types/passport-jwt": "^3.0.13",
 		"prisma": "^5.7.0",
 		"typescript": "^5.3.3"
 	}
