--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx tsc",
@@ -25,6 +24,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.4",
 		"@types/passport-jwt": "^3.0.13",
