--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,8 +4,7 @@
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"sourceMap": true,
-		"esModuleInterop": true,
 		"outDir": "./dist"
 	},
-	"include": ["src/**/*.ts"]
+	"include": ["src/**/*"]
 }
