--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "npm-run-all2": "^6.1.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.2.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.5",
     "vitest": "^1.0.1",
     "vue-tsc": "^1.8.25"
