--- a/client/package.json
+++ b/client/package.json
@@ -26,10 +26,14 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "cypress": "^13.6.1",
+    "daisyui": "^4.4.19",
     "jsdom": "^23.0.1",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.32",
     "start-server-and-test": "^2.0.3",
+    "tailwindcss": "^3.3.6",
     "typescript": "~5.2.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.5",
