--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
 	"dependencies": {
 		"@prisma/client": "^5.7.0",
 		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.6",
 		"date-fns": "^2.30.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
@@ -26,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.6",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.4",
 		"@types/passport-jwt": "^3.0.13",
