--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
+		"stripe": "^14.9.0",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
