--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "date-fns": "^3.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
