--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^5.7.0",
+		"@types/nodemailer": "^6.4.14",
 		"bcrypt": "^5.1.1",
+		"cloudinary": "^1.41.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"date-fns": "^2.30.0",
@@ -23,6 +25,8 @@
 		"express": "^4.18.2",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.7",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"stripe": "^14.9.0",
@@ -32,6 +36,7 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.6",
 		"@types/express": "^4.17.21",
+		"@types/multer": "^1.4.11",
 		"@types/node": "^20.10.4",
 		"@types/passport-jwt": "^3.0.13",
 		"prisma": "^5.7.0",
