--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL="http://localhost:3000"
-# VITE_BASE_URL="https://eventtixapi.onrender.com"
+# VITE_BASE_URL="http://localhost:3000"
+VITE_BASE_URL="https://eventtixapi.onrender.com"
 VITE_CLOUDINARY_CLOUD_NAME="dyblcumh2"
